Victor Montoya - Complete

--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,75 @@
-// Start here!
+.container {
+    display: flex;
+    
+}
+.row{
+    display: flex;
+}
+    .row nav {
+        display: flex;
+         width: 100%;
+         margin-top: 2%;
+
+        }
+         .row nav a {
+            display: flex;
+             width: 100%;
+             margin: 20%;
+            align-items: flex-end;
+            justify-content:center;
+            align-self: center;
+            vertical-align: middle;
+            text-align: center;
+            border-bottom: 1px solid grey;
+             border-bottom-width: 100%;
+
+            }
+
+
+
+.row .jumbotron .row{
+    display: flex;
+    margin: 1%;
+    }
+
+.row .jumbotron .card-link{
+    display: inline-flex;
+    margin: 1%;
+    }
+.row .jumbotron img{
+    display: block;
+    width: 100%;
+    }
+.row .jumbotron .btn{
+    display: ;
+  margin-top: 5%;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+    align-self: center;
+}
+
+.row h4{
+    margin: 1%;
+}
+
+.footer {
+  margin-top: 20px;
+  padding: 20px 0;
+  background: gray;
+  color: white;
+}
+
+.footer .card{
+  margin: 2%;
+  background: gray;
+  color: white;
+    border: 0px;
+}
+
+.footer .card .btn{
+  margin: 2%;
+  background: solid green;
+  color: white;
+    border: 0px;
+}
